--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
 
 
 /* shared styles */
+* {
+    margin: 0;
+    padding: 0;
+}
 
 .azeret-mono {
     font-family: "Azeret Mono", monospace;
@@ -18,6 +22,13 @@
     cursor: pointer;
 }
 
+.common-description {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    opacity: 70%;
+}
+
 /* nav styles */
 nav {
     display: flex;
@@ -30,4 +41,38 @@ nav {
     color: #0D1321;
     font-size: 28px;
     font-weight: 800;
+}
+
+/* Banner styles */
+
+.banner {
+    display: flex;
+    background-image: url("../assets/Hero-bg.png");
+    height: 652px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: 50px;
+}
+
+.banner-content {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.banner .banner-content .banner-title {
+    font-size: 48px;
+    color: #0D1321;
+    font-weight: 800;
+    line-height: 68px;
+    margin-top: 32px;
+    margin-bottom: 24px;
+}
+
+#banner-btn {
+    margin-top: 30px;
+    background-color: #0D1321;
+    color: #fff;
 }
