--- a/styles/style.css
+++ b/styles/style.css
@@ -93,8 +93,38 @@ main {
     border-radius: 16px;
 }
 
+/* Development styles */
+
 .development-content {
     max-width: 852px;
     margin: 0 auto;
     text-align: center;
+}
+
+.dev-hero-container {
+    margin-top: 45px;
+}
+
+.dev-hero-card {
+    display: flex;
+    justify-content: space-between;
+    padding: 45px;
+    border-radius: 16px;
+    background-color: #FFFFFF;
+    margin-bottom: 32px;
+}
+
+.card-content {
+    width: 477px;
+}
+
+.card-content .card-title {
+    font-size: 24px;
+    font-weight: 700;
+    color: #0D1321B3;
+    margin-bottom: 16px;
+}
+
+.card-content > p {
+    margin-bottom: 30px;
 }
