--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ main {
     margin-bottom: 16px;
 }
 
-.card-content > p {
+.card-content>p {
     margin-bottom: 30px;
 }
 
@@ -139,4 +139,62 @@ main {
 
 .inspiration-video {
     padding: 32px;
+}
+
+/* Current target section styles */
+
+.target-section {
+    margin-top: 120px;
+}
+
+.target-content {
+    max-width: 852px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.target-card-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    margin-top: 50px;
+}
+
+.target-card {
+    padding: 40px;
+    border-radius: 16px;
+}
+
+.target-card>h4 {
+    font-size: 24px;
+    font-weight: 800;
+    margin-top: 24px;
+}
+
+.target-card>p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 10px;
+    margin-bottom: 24px;
+}
+
+.target-card> a{
+    font-size: 16px;
+    font-weight: 700;
+    color: #0D1321;
+}
+
+/* html, css, js target card bg color */
+
+#html-card {
+    background-color: #FF4C1E0D;
+}
+
+#css-card {
+    background-color: #004CE80D;
+}
+
+#js-card {
+    background-color: #FFDF000D;
 }
