I have added the background linear gradient of the support section

--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,8 @@ main {
 
 .submit-section {
     background-image: url("../assets/handshake.jpg");
-    background: linear-gradient(to top bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), url(Email));
+    background-color: rgba(0,0,0,0.5);
+    background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
